--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -559,7 +559,6 @@ h6,
 }
 
 
-
 #msg-box8-d .mbr-section-title,
 #msg-box8-d p {
   color: #fff;
@@ -567,20 +566,6 @@ h6,
 #msg-box8-d .mbr-section-title {
   color: #0bcf22;
   font-size: 30px;
-}
-#features7-f .card-subtitle {
-  color: #bcbcbc;
-}
-#features7-f .iconbox {
-  background-color: #19c224;
-  border-color: #19c224;
-}
-#features7-f H4 {
-  font-size: 18px;
-  font-family: 'Raleway', sans-serif;
-}
-#features7-f P {
-  font-size: 15px;
 }
 #menu-9 .hide-buttons .nav-btn {
   display: none !important;
@@ -649,6 +634,13 @@ h6,
 #footer1-b P {
   color: #0baf22;
 }
+#features7-1u .card-subtitle {
+  color: #bcbcbc;
+}
+#features7-1u .iconbox {
+  background-color: #19c224;
+  border-color: #19c224;
+}
 #msg-box5-g H3 {
   color: #0baf22;
   font-size: 30px;
@@ -664,10 +656,6 @@ h6,
 }
 #msg-box5-h P {
   text-align: right;
-}
-#msg-box5-i H3 {
-  color: #0baf22;
-  font-size: 30px;
 }
 #msg-box5-j H3 {
   color: #0baf22;
