--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1025,3 +1025,114 @@ h6,
 #footer1-8 P {
   color: #0baf22;
 }
+
+
+#menu-1x .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-1x .navbar-caption {
+  color: #ffffff;
+  font-family: 'Indie Flower', cursive;
+  font-size: 14px;
+}
+#menu-1x .navbar-toggler {
+  color: #0baf22;
+}
+#menu-1x .close-icon::before,
+#menu-1x .close-icon::after {
+  background-color: #0baf22;
+}
+#menu-1x .link,
+#menu-1x .dropdown-item {
+  color: #0baf22;
+  font-family: 'Raleway', sans-serif;
+}
+#menu-1x .link {
+  font-size: 0.75rem;
+}
+#menu-1x .dropdown-item,
+#menu-1x .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-1x .link:hover,
+#menu-1x .dropdown-item:hover,
+#menu-1x .link:focus,
+#menu-1x .dropdown-item:focus {
+  color: #19c224;
+}
+#menu-1x .link[aria-expanded="true"],
+#menu-1x .dropdown-menu {
+  background: #0e0e0e;
+}
+#menu-1x .nav-dropdown-sm .link:focus,
+#menu-1x .nav-dropdown-sm .link:hover,
+#menu-1x .nav-dropdown-sm .dropdown-item:focus,
+#menu-1x .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#menu-1x .navbar,
+#menu-1x .nav-dropdown-sm,
+#menu-1x .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-1x .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#menu-1x .bg-color.transparent .link {
+  color: #0baf22;
+  transition: none;
+}
+#menu-1x .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-1x .bg-color.transparent.opened .link:hover,
+#menu-1x .bg-color.transparent.opened .link:focus {
+  color: #19c224;
+}
+#menu-1x .link[aria-expanded="true"],
+#menu-1x .dropdown-item[aria-expanded="true"] {
+  color: #19c224!important;
+}
+#footer1-1z P {
+  color: #0baf22;
+}
+#header4-21 .mbr-section-title {
+  font-size: 30px;
+}
+#header4-21 .mbr-section-lead {
+  font-size: 22px;
+}
+#features7-20 .card-subtitle {
+  color: #bcbcbc;
+}
+#features7-20 .iconbox {
+  background-color: #19c224;
+  border-color: #19c224;
+}
+#features7-20 H4 {
+  font-size: 18px;
+}
+#features7-20 P {
+  font-size: 15px;
+}
+#features7-22 .card-subtitle {
+  color: #bcbcbc;
+}
+#features7-22 .iconbox {
+  background-color: #19c224;
+  border-color: #19c224;
+}
+#features7-22 H4 {
+  font-size: 18px;
+}
+#features7-22 P {
+  font-size: 15px;
+}
+#contacts1-1y STRONG {
+  color: #0baf22;
+}
+#contacts1-1y SPAN {
+  color: #0baf22;
+}
+#contacts1-1y P {
+  color: #ffffff;
+  font-size: 13px;
+}
